add Lorem and style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,30 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<title>git work</title>
 </head>
+
 <body>
 	<p>hello git</p>
+	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, enim quos corrupti quis eligendi ad numquam
+		molestias deserunt aut sint non rem laborum quidem eveniet earum ipsum quam. Unde, atque.
+		Magni blanditiis ea, dolorum quidem adipisci ipsam tempore quaerat, a perferendis illo deserunt autem quia
+		pariatur necessitatibus velit esse nesciunt aliquid alias culpa id accusamus, unde consectetur rem! Debitis,
+		corrupti.
+		Dolores, nihil dolore aut nemo similique tempora perferendis labore iure placeat nam itaque quos molestiae
+		quibusdam quam. Ab maxime a nobis accusamus fugit nulla vel beatae! Tempora exercitationem libero sit.
+		Minima maxime, non tenetur inventore quidem ipsa reprehenderit repellendus dolorum omnis provident qui voluptas
+		autem blanditiis, eligendi, sequi perferendis nostrum illo iusto magnam magni quis. Sequi ducimus cupiditate
+		tenetur explicabo.
+		Consectetur cumque officia, fugit eligendi in illo debitis repellendus quasi veniam quia. Reiciendis quisquam
+		dolor architecto sunt? Tenetur inventore, sint sapiente a qui atque consequuntur. Iusto ipsam accusamus cumque
+		debitis?
+		Voluptate totam consectetur itaque aliquam numquam amet omnis neque sit, alias pariatur earum repellendus quasi
+		optio cumque similique corporis doloremque natus id cum aut doloribus exercitationem? Vitae ipsa totam autem.
+		Non tempore quos debitis. In nihil possimus reiciendis tenetur at. Debitis architecto cumque repellendus itaque
+		eos ducimus est. Doloremque, tenetur pariatur. Assumenda doloribus dignissimos dolores quaerat id cum suscipit
+		nulla.
+		Harum dolores odio hic ratione accusamus laborum vero veniam sapiente eaque. Nobis illum repudiandae modi! Omnis
+		accusantium numquam, odio laborum molestias veniam sapiente consequatur deleniti error, repudiandae sint neque
+		perferendis?</p>
 </body>
+
 </html>
